@@ -9,6 +9,7 @@
 	* bugfix #299: added missing declarations to host2str.h
 	* ldns-compare-zones -s to not exclude SOA record from comparison.
 	* --disable-rpath fix
+	* fix ldns_pkt_empty(), reported by Alex Nicoll.
 
 1.6.4	2010-01-20
 	* Imported pyldns contribution by Zdenek Vasicek and Karel Slany.
